<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/projectsFragment">

    <fragment
        android:id="@+id/projectsFragment"
        android:name="com.coder.app.ui.projects.ProjectsFragment"
        android:label="@string/nav_projects"
        tools:layout="@layout/fragment_projects">
        
        <action
            android:id="@+id/action_projects_to_editor"
            app:destination="@id/editorFragment" />
            
    </fragment>

    <fragment
        android:id="@+id/editorFragment"
        android:name="com.coder.app.ui.editor.EditorFragment"
        android:label="@string/nav_editor"
        tools:layout="@layout/fragment_editor">
        
        <argument
            android:name="projectId"
            app:argType="string"
            app:nullable="true" />
            
        <argument
            android:name="fileId"
            app:argType="string"
            app:nullable="true" />
            
    </fragment>

    <fragment
        android:id="@+id/aiChatFragment"
        android:name="com.coder.app.ui.chat.AIChatFragment"
        android:label="@string/nav_ai_chat"
        tools:layout="@layout/fragment_ai_chat">
        
        <argument
            android:name="projectId"
            app:argType="string"
            app:nullable="true" />
            
    </fragment>

    <fragment
        android:id="@+id/terminalFragment"
        android:name="com.coder.app.ui.terminal.TerminalFragment"
        android:label="@string/nav_terminal"
        tools:layout="@layout/fragment_terminal">
        
        <argument
            android:name="projectId"
            app:argType="string"
            app:nullable="true" />
            
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.coder.app.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
